# s2

./: .gitignore  .pre-commit-config.yaml  README.md  config.toml  get_points_of_intrest.py  hwnd.py  improvments  pois.toml  setup.cfg  setup.py
hotkey/: __init__.py  __main__.py  hotkey.py  keycodes.py  windows.py
images/: .gitignore
images/map/: index.html  map.py  stitch.py
s2/: __main__.py  config.py  coords.py  get_image.py  gui.py  huematch.py  hwnd.py  main.py  map_loader.py  parse_map.py  pipeline.py  pois.py  position_updater.py  s2.py  test_module.py  test_util.py  util.py
test/s2/: test_config.py  test_config1.toml  test_config2.toml  test_coords.py  test_parse_map.py  test_pipeline.py  test_util.py
