[metadata]
name = s2
version = 0.1
description = Second Screen
long_description = file: README.md
url = https://github.com/wonkodv/s2
download_url = https://github.com/wonkodv/s2/tarball/master

[options]
packages = s2
include_package_data = True
zip_safe = False
install_requires =
    opencv-python
    numpy==1.19.3 # unpin once fmod bug on windows is fixed
    toml

tests_require =
    pytest

[flake8]
max-line-length = 110
ignore = E203,  # Whitespace before :
         E501,  # Line too long
exclude = .git
